--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/portfolio
 NODE_ENV=development
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/portfolio
