--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "portfolio-backend",
   "version": "1.0.0",
   "description": "Backend API for portfolio website",
-  "main": "server.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node src/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/server.js"
+    "build": "tsc",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec tsx src/server.ts",
+    "watch": "tsc --watch",
+    "clean": "rimraf dist"
   },
   "keywords": [
     "portfolio",
@@ -24,7 +27,14 @@
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
